<resources>
    <string name="app_name">PolyGuide</string>
    <string name="info_name">Полезная информация (англ.)</string>
    <string name="back">Назад (англ.)</string>
    <string name="home">Домой (англ.)</string>
    <string name="search">Карта приложения (англ.)</string>
    <string name="timetable">Расписание (англ.)</string>
    <string name="doc">Справки (англ.)</string>
    <string name="foreign_students">Иностранным студентам (англ.)</string>
    <string name="portal">Электронные порталы (англ.)</string>
    <string name="associations">Студенческие объединения (англ.)</string>
    <string name="help">Социальное обеспечение (англ.)</string>
    <string name="settlement">Поселение студентов первого курса (англ.)</string>
    <string name="hostel">Общежития (англ.)</string>
    <string name="medical">Медицинское обслуживание (англ.)</string>
    <string name="grant">Стипендии, социальная поддержка (англ.)</string>
    <string name="army">Отсрочка от призыва на военную службу (англ.)</string>
    <string name="trip">Льготный проезд (англ.)</string>
    <string name="support">Материальная поддержка (англ.)</string>
    <string name="relax">Базы отдыха (англ.)</string>
    <string name="title_settlement">Инструкция по порядку поселения иногородних студентов первого курса в общежития Студенческого городка СПбПУ:</string>
    <string name="social_settlement" formatted="false"><![CDATA[
        1. Поселение студентов первого курса производится в соответствии
        со списками, предоставленными институтами и колледжем (списки о предоставлении мест
        размещены на сайте СПбПУ в разделах институтов). <br/><br/>

        2. Документы, необходимые для поселения в общежитие и оформления договора найма жилого помещения: <br/>
        - паспорт, копия паспорта (лист 1 и лист с данными о регистрации); <br/>
        - 3 фотографии 3*4; <br/>
        - приписное свидетельство или военный билет (для лиц мужского пола);<br/>
        - полис обязательного медицинского страхования; <br/>
        - медицинская справка (форма 086); <br/>
        - справка (форма 063) или сертификат о прививках; <br/>
        - нотариально заверенное согласие законных представителей: родителей, усыновителей или попечителей (ст. 26 ГК РФ) (для несовершеннолетних студентов). <br/>

        3. По прибытии в университет студент: <br/>
        - Заселяется в закреплённое за институтом (колледжем) общежитие. <br/>
        - Для дальнейшего оформления обращается, в соответствии с графиком, в Единый центр по оформлению регистрации и поселению
        иногородних граждан (Санкт-Петербург, пр. Непокорённых, д.8, корп.2, тел. (812) 248-92-09). <br/>
        - Проходит медицинский осмотр и получает справку в поликлинике №76 (Санкт-Петербург, ул. Хлопина, д.11, корп.1). <br/><br/>

        4. Студенты первого курса, приехавшие в СПбПУ в выходные дни или в нерабочее время, для временного
        поселения могут обращаться в общежитие №8 (Санкт-Петербург, ул. Хлопина, д.9, корп.2, тел. (812) 297-43-50). <br/><br/>

        5. Для родителей или лиц, сопровождающих студентов, предусмотрена возможность проживания в номерах
        повышенной комфортности Студенческого городка при наличии свободных мест и предварительного
        бронирования. Бронирование номеров и поселение сопровождающих осуществляется администрацией
        комплекса дополнительного обслуживания (Гражданский проспект, д. 28, тел.(812)534-13-68, e-mail: hotel@spbstu.ru). <br/>
        ]]>
</string>
    <string name="social_hostel"> formatted="false"><![CDATA[
       <br/>В общежитиях Студенческого городка СПбПУ проживают более 10 000 иногородних и иностранных студентов.
       Все общежития расположены в шаговой доступности от остановок городского наземного транспорта или метрополитена.<br/><br/>

       Территориально Студенческий городок разделён на 3 комплекса общежитий: <br/>
       - «на Лесном проспекте»; <br/>
       - «на Площади Мужества»;<br/>
       - «на Гражданском проспекте».<br/><br/>

       Студенты в общежитиях Студенческого городка СПбПУ проживают по 2, 3 или 4 человека в комнате.
       Все корпуса оснащены системами контроля доступа и системами наружного и внутреннего видеонаблюдения.
       Вход в общежития осуществляется по пропускам. <br/><br/>
       Иностранные студенты университета, как правило, проживают в общежитиях №13 и №15 комплекса
       «на Гражданском проспекте и в общежитиях №8 и № 12 комплекса «на Площади Мужества». <br/><br/>

       Для комфортной, насыщенной и интересной жизни студентов в общежитиях оборудованы теннисные и тренажерные залы,
       учебные комнаты, прачечные самообслуживания, обеспечен высокоскоростной доступ к сети Интернет и
       цифровому телевидению. В общежитиях есть зоны бесплатного Wi-Fi интернета. На территории Студенческого
       городка оборудованы спортивные площадки, работают спортивные секции, студенческий клуб. Ежегодно
       проводятся турниры по минифутболу, волейболу, баскетболу, настольному теннису, шахматам и другие
       спортивные мероприятия, в которых принимают участие до 20 команд от общежитий. <br/><br/>

       Иногородним абитуриентам, подавшим документы в СПбПУ в летний период Приемной кампании, на время
       проведения вступительных испытаний и конкурса предоставляется общежитие (без сопровождающих лиц) по
       направлению из приёмной комиссии. Информацию по поселению абитуриентов можно получить по
       тел.+7(812)248-92-09, E-mail:tmstepanova@spbstu.ru. <br/><br/>

      Для поселения в общежитие абитуриентам необходимо:<br/>

      - получить направление приемной комиссии; <br/>
      - иметь при себе документ, удостоверяющий личность; <br/>
      - иметь медицинскую справку форма 086у (с обязательной отметкой о флюорографическом обследовании или
        отдельную справку о флюорографическом обследовании);<br/>
      - абитуриентам, не достигшим возраста 18 лет и прибывшим без сопровождения родителей или иных законных
        представителей на срок более трёх суток, необходимо иметь нотариально заверенное согласие родителей
       (одного из родителей) или иных законных представителей на действия, связанные с поселением и
        регистрацией. В документе должен быть указан вид действия, на которое даётся согласие: «Я, (Ф.И.О.),
        даю разрешение на регистрацию по месту пребывания и проживания моего несовершеннолетнего сына
       (дочери) (паспортные данные и данные свидетельства о рождении) в общежитии
       ФГАО ВО «Санкт – Петербургский политехнический университет Петра Великого» на период прохождения
       вступительных испытаний или на период обучения в вышеуказанном университете».<br/><br/>

       Абитуриенты, приехавшие в СПбПУ в нерабочее время, для временного поселения могут обращаться в
       общежитие № 8 по адресу: ул.Хлопина д.9, корп.2, станция метро «Площадь Мужества», тел.+7(812)297-43-50.<br/><br/>

       Для деловых партнеров СПбПУ, а также для родителей студентов и абитуриентов предусмотрена возможность
       проживания в номерах повышенной комфортности Студенческого городка. По вопросам бронирования мест и
       поселения обращайтесь в администрацию комплекса дополнительного обслуживания по адресу:
       Гражданский проспект, д.28, тел.+7(812)534-13-68, E-mail:hotel@spbstu.ru. <br/><br/>

       Зачисленным иногородним студентам очной формы обучения на основании статьи 39 главы 4 Федерального
       закона «Об образовании в Российской Федерации» № 273-ФЗ от 29 декабря 2012 года предоставляется
       места для проживания в общежитиях при наличии соответствующего жилищного фонда, исходя из количества
       имеющихся свободных мест. <br/><br/>

       Телефон для справок:+7(812)248-92-09, E-mail:uprstg@spbstu.ru.<br/>
 ]]>
 </string>
    <string name="social_relax" formatted="false"><![CDATA[
    <br/>Политехнический университет - не только учебно-научный, но и крупный социальный комплекс.
    На всех этапах развития института  обеспечение быта и отдыха политехников были существенной
    частью деятельности его руководства. Большую роль в этой работе играли всегда и усилия общественных
    организаций института, самодеятельность преподавателей и студентов. В настоящее время университет
    располагает базами отдыха на Карельском перешейке и на Черном море. <br/><br/>

    СЕВЕРНЫЙ ЛАГЕРЬ<br/><br/>
    Северный лагерь, организованный 50 лет назад как база проведения летнего тренировочного сбора ведущих
    спортсменов политехнического института, в настоящее время является излюбленным местом отдыха его
    сотрудников и студентов. За эти годы лагерь дважды поменял место своей дислокации, но с 1957 он
    находится на юго-западной окраине поселка Горы на высоком берегу реки Вуоксы (Приозерский район).<br/><br/>

    Становление лагеря и превращение его в любимую базу отдыха оказалось возможным благодаря усилиям
    руководителей и преподавателей спортивной кафедры института, его администрации (проректор ЛПИ по
    администратино-хозяйственной работе Б.П. Бельтихин был главной «движущей силой» строительства лагеря),
    неисчерпаемой энергии нынешних ветеранов-политехников, вниманию профсоюзных организаций сотрудников и студентов.
    Лучше всего о роли Северного лагеря в жизни политехников могут рассказать стихи, песни и проза,
    посвященные ему. Их авторы не являются профессиональными литераторами, но вся обстановка лагеря,
    его природа помогли зафиксировать в поэтическом слове его неповторимую атмосферу. Отдал должное
    Северному лагерю и профессиональный литератор, член Союза писателей России, в прошлом -
    выпускник ФРЭ (факультет радиоэлектроники) и научный сотрудник кафедры физики полупроводников,
    Александр Житинский. Рассказ этот был им написан в Северном лагере и впервые там же прочитан
    автором на вечере отдыха. <br/><br/>

    ЮЖНЫЙ ЛАГЕРЬ<br/><br/>
    В 1959 году Политехническому институту была передана только что освободившаяся пограничная
    застава в пос. Новомихайловском под Туапсе, на берегу прекрасной бухты. Спортсмены института стали
    организовывать здесь палаточные спортивно-оздоровительные лагеря, которые в дальнейшем превратились
    в знаменитый Южный лагерь. Каждый год здесь отдыхают более 500 студентов и преподавателей
    политехнического университета.<br/><br/>

    Распределением путевок в лагеря отдыха занимаются:<br/><br/>

     профсоюзный комитет сотрудников<br/>
     +7(812)247-2143<br/>
     195251, Санкт-Петербург, Политехническая, 29, 1к., каб 339.<br/><br/>

     профсоюзный комитет студентов<br/>
     +7 (812) 552-98-53<br/>
     195251, Санкт-Петербург, Политехническая, 29, 1к., каб 349.<br/>
     ]]>
    </string>
    <string name="support_a">Обучающиеся, оставшиеся без попечения родителей</string>
    <string name="support_b">Обучающиеся, потерявшие родителя</string>
    <string name="support_c">Обучающиеся-инвалиды (имеющие родителей-инвалидов)</string>
    <string name="support_d">Участники военных действий</string>
    <string name="support_e">Обучающиеся, пострадавшие в результате радиационных катастроф</string>
    <string name="support_f">Обучающиеся, имеющие тяжелое материальное положение</string>
    <string name="support_g">Обучающиеся, нуждающиеся в поддержке по ухудшению здоровья или заболеванию</string>
    <string name="support_h">Обучающиеся, ставшие жертвами чрезвыйчаных обстоятельств</string>
    <string name="support_i">Семьи, состоящие из обучающихся</string>
    <string name="support_j">Беременность обучающихся и роды</string>
    <string name="support_k">Обучающиеся в связи с рождением (усыновлением) ребенка</string>
    <string name="support_l">Обучющиеся по уходу за ребенком</string>
    <string name="support_m">Доноры</string>
    <string name="support_n">Обучающиеся, проживающие в общежитии (дети-сироты и дети, оставшиеся без попечения родителей)</string>
    <string name="support_o">Организация отдыха</string>
    <string name="support_p">Прохождение оздоровления в бассейне</string>
</resources>