<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SocialHelpActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_a"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="a"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_b"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="b"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_c"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="c"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_d"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="d"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="e"
                    android:text="@string/support_e"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_f"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="f"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_g"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="g"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_h"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="h"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_i"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="i"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_j"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="j"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="k"
                    android:text="@string/support_k"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_l"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="l"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_m"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="m"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_n"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="n"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_o"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp"
                    android:onClick="o"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="p"
                    android:text="@string/support_p"
                    android:textColor="@color/darkPoly"
                    android:textSize="18dp" />

                <android.support.design.widget.BottomNavigationView
                    android:id="@+id/bottom_navigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:textSize="18dp"
                    app:itemBackground="@color/white"
                    app:itemIconTint="@color/darkPoly"
                    app:itemTextColor="@color/darkPoly"
                    app:menu="@menu/menu_bottom_navigation" />
            </LinearLayout>
        </ScrollView>

</android.support.constraint.ConstraintLayout>