<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/doc"
            android:textSize="18dp"
            android:onClick="doc"
            android:textColor="@color/darkPoly"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/foreign_students"
            android:textSize="18dp"
            android:textColor="@color/darkPoly"
            android:onClick="foreign"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/portal"
            android:textSize="18dp"
            android:textColor="@color/darkPoly"
            android:onClick="portal"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            android:onClick="support"
            android:textSize="18dp"
            android:textColor="@color/darkPoly"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help"
            android:textSize="18dp"
            android:textColor="@color/darkPoly"
            android:onClick="help"/>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="18dp"
            app:itemBackground="@color/white"
            app:itemIconTint="@color/darkPoly"
            app:itemTextColor="@color/darkPoly"
            app:menu="@menu/menu_bottom_navigation" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>